# sgscript

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SGScript.cbp  core.mk  main.c  makefile  readme.txt  sgs_bcg.c  sgs_bcg.h  sgs_cfg.h  sgs_ctx.c  sgs_ctx.h  sgs_fnt.c  sgs_fnt.h  sgs_proc.c  sgs_proc.h  sgs_std.c  sgs_tok.c  sgs_tok.h  sgs_util.c  sgs_util.h  sgs_vmh.h  sgs_xpc.h  sgscript.h
bench/: bench.lua  bench.php  bench.py  bench.sgs
docs/: advdoc.css  advdoc.js  docdata.txt  docgen.sgs  docgen_all.sgs  docgen_web.sgs  docraw.txt  docs.css  docs.js  doctree.txt  error_policy.txt  markdown.sgs  notes.txt  sgs.cppbc.docs.htm  sgs.cppbc.docs.txt  sgs.json.docs.htm  sgs.json.docs.txt  sgs.meta.docs.htm  sgs.meta.docs.txt  sgs.sockets.docs.htm  sgs.sockets.docs.txt  sgs.xgmath.docs.htm  sgs.xgmath.docs.txt  sgscript-docs.htm  sgscript.docs.htm  sgscript.docs.txt  sgscript.htm  sgscript.tutorial.htm  sgscript.tutorial.txt
dotnet/: SGS.NET.sln
examples/: action-flow.sgs  closure-counter.sgs  dict-speed.sgs  directory-size.sgs  hash-test.sgs  memory-test.sgs  opchain-test.sgs  pagination.sgs  recursion-test.sgs  sgstest_mt.c  text-server.sgs
ext/: cppbc.cmake  cppbc.sgs  sgs2c.sgs  sgs_cppbc.h  sgs_dbgserver.c  sgs_dbgserver.h  sgs_em.c  sgs_idbg.c  sgs_idbg.h  sgs_prof.c  sgs_prof.h  sgsapitest.c  sgsapitest_core.h  sgsc.c  sgscppbctest.cpp  sgscppbctest.h  sgsexe.c  sgsjson.c  sgsmeta.c  sgspproc.c  sgssockets.c  sgstest.c  sgsubench.c  sgsvm.c  sgsxgmath.c  sgsxgmath.h
jni/: Android.mk  test_android.sgs
src/: sgs_bcg.c  sgs_bcg.h  sgs_cfg.h  sgs_ctx.c  sgs_ctx.h  sgs_fnt.c  sgs_fnt.h  sgs_int.h  sgs_jit.c  sgs_msvc_dirent.h  sgs_proc.c  sgs_proc.h  sgs_regex.c  sgs_regex.h  sgs_srlz.c  sgs_std.c  sgs_std.h  sgs_stdL.c  sgs_stdM.c  sgs_stdT.c  sgs_tok.c  sgs_tok.h  sgs_util.c  sgs_util.h  sgs_xpc.c  sgs_xpc.h  sgscript.h
tests/: !!bug00004_TF.txt  !!s_boolops_TF.txt  !API_TF.txt  !API_TF_class.sgs  !API_TF_fmt.sgs  !API_TF_io.sgs  !API_TF_io.txt  !API_TF_json.sgs  !API_TF_native.txt  !API_TF_sgson.sgs  !API_TF_std.sgs  !API_TF_std.txt  !API_TF_string.sgs  !API_TF_string.txt  !API_TF_syntax.sgs  (+119 more)
(+31 files in other folders)
